--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 
 	<body>
 		<div class="column1 black">
-			<div class="uncledrew center" onclick="uncledrew()">
-				<img src="images/uncledrew.jpg" class="contain-image2"/>
+			<div class="uncledrew center c-drew" onclick="uncleDrew()">
+				<img src="images/uncledrew.jpg" class="contain-image2 shake" id="ud"/>
 			</div>
-			<div class="title center" id="title">
-				<img src="images/title1.PNG" class="contain-image"/>
+			<div class="title center button-effect cursor2" onclick="kyrieTitle()" id="title">
+				<img src="images/title1.png" class="contain-image" />
 			</div>
-			<div class="logo center">
-				<img src="images/logo.gif" class="contain-image2"/>
+			<div class="logo center " onclick="kyrieLogo()">
+				<img src="images/logo2.jpg" class="contain-image2" id="lg"/>
 			</div>
 		</div>
-		<div class="column2 ">
+		<div class="column2 black">
 			<div class="main dark-grey center">
 				<img src="images/brooklyn.PNG" class="contain-image2" id="main1"/>
 			</div>
-			<div class="main green center">
+			<div class="main green center" id="bigmain2">
 				<img src="images/celtics.PNG" class="contain-image2" id="main2"/>
 			</div>
 			<div class="main maroon center">
@@ -33,24 +33,24 @@
 		<div class="column3">
 			<div class="section1">
 				<div class="shoes center">
-					<img src="images/s1a.jpg" class="contain-image2" onclick="firstpair()" id="k1"/>
+					<img src="images/s1a.jpg" class="contain-image2 black-white color button-effect" onclick="firstPair()" id="k1"/>
 				</div>
 				<div class="shoes center">
-					<img src="images/s2b.jpg" class="contain-image2" onclick="secondpair()" id="k2"/>
+					<img src="images/s2b.jpg" class="contain-image2 black-white color button-effect" onclick="secondPair()" id="k2"/>
 				</div>
 				<div class="shoes center">
-					<img src="images/s3c.jfif" class="contain-image2" onclick="thirdpair()" id="k3"/>
+					<img src="images/s3c.jfif" class="contain-image2 black-white color button-effect" onclick="thirdPair()" id="k3"/>
 				</div>
 			</div>
 			<div class="section2">
 				<div class="shoes center">
-					<img src="images/s4d.jpg" class="contain-image2" onclick="fourthpair()" id="k4"/>
+					<img src="images/s4d.jpg" class="contain-image2 black-white color button-effect" onclick="fourthPair()" id="k4"/>
 				</div>
 				<div class="shoes center">
-					<img src="images/s5e.jpg" class="contain-image2" onclick="fithpair()" id="k5"/>
+					<img src="images/s5e.jpg" class="contain-image2 black-white color button-effect" onclick="fithPair()" id="k5"/>
 				</div>
 				<div class="shoes center">
-					<img src="images/s6f.jpg" class="contain-image2" id="k6"/>
+					<img src="images/s6f.png" class="contain-image2 black-white color button-effect" onclick="sixPair()" id="k6"/>
 				</div>	
 			</div>		
 		</div>
